--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,14 +85,58 @@ services:
       - 6832:6832/udp
       - 5778:5778
       - 16686:16686
-      - 4317:4317
+      # - 4317:4317
       - 4318:4318
       - 14250:14250
       - 14268:14268
       - 14269:14269
-      - 9411:9411
+      # - 9411:9411
     networks:
       - observability
+  zipkin:
+    image: openzipkin/zipkin:latest
+    restart: always
+    ports:
+      - "9411:9411"
+    networks:
+      - observability
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:latest
+    restart: always
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - observability
+      - application
+
+  # Collector
+  otel-collector:
+    image: ${OTELCOL_IMG}
+    restart: always
+    command:
+      [
+        "--config=/etc/otel-collector-config.yaml",
+        "${OTELCOL_ARGS}"
+      ]
+    volumes:
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "1888:1888" # pprof extension
+      - "8888:8888" # Prometheus metrics exposed by the collector
+      - "8889:8889" # Prometheus exporter metrics
+      - "13133:13133" # health_check extension
+      - "4317:4317" # OTLP gRPC receiver
+      - "55679:55679" # zpages extension
+    depends_on:
+      - jeager
+      - zipkin
+    networks:
+      - observability
+      - application
 
 networks:
   observability:
