--- a/video_admin/package.json
+++ b/video_admin/package.json
@@ -20,7 +20,8 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typeorm": "^0.3.10",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.0",
