adjusting collector configs

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,29 +70,43 @@ services:
   #     - application
   #     - observability
 
-  jeager:
-    image: jaegertracing/all-in-one:latest
-    container_name: jeager
-    environment:
-      # SPAN_STORAGE_TYPE: elasticsearch
-      # ES_SERVER_URLS: "https://observability.es.us-east-1.aws.found.io"
-      # ES_USERNAME: elastic
-      # ES_PASSWORD: eR5B3cMMklU3srbRtzXGJOll
-      COLLECTOR_ZIPKIN_HOST_PORT: 9411
-      # COLLECTOR_OTLP_ENABLED: true
+  # jeager:
+  #   image: jaegertracing/all-in-one:latest
+  #   container_name: jeager
+  #   environment:
+  #     # SPAN_STORAGE_TYPE: elasticsearch
+  #     # ES_SERVER_URLS: "https://observability.es.us-east-1.aws.found.io"
+  #     # ES_USERNAME: elastic
+  #     # ES_PASSWORD: eR5B3cMMklU3srbRtzXGJOll
+  #     COLLECTOR_ZIPKIN_HOST_PORT: 9411
+  #     # COLLECTOR_OTLP_ENABLED: true
+  #   ports:
+  #     - 6831:6831/udp
+  #     - 6832:6832/udp
+  #     - 5778:5778
+  #     - 16686:16686
+  #     # - 4317:4317
+  #     - 4318:4318
+  #     - 14250:14250
+  #     - 14268:14268
+  #     - 14269:14269
+  #     # - 9411:9411
+  #   networks:
+  #     - observability
+  collector:
+    image: otel/opentelemetry-collector-contrib
+    #    image: otel/opentelemetry-collector-contrib:latest
+    command: [ "--config=/conf/collector-config.yaml" ]
+    volumes:
+      - ./collector-config.yaml:/conf/collector-config.yaml
     ports:
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686
-      # - 4317:4317
-      - 4318:4318
-      - 14250:14250
-      - 14268:14268
-      - 14269:14269
-      # - 9411:9411
-    networks:
-      - observability
+      - "9464:9464"
+      - "4317:4317"
+      - "4318:4318"
+    depends_on:
+      - zipkin
+
+  # Zipkin
   zipkin:
     image: openzipkin/zipkin:latest
     restart: always
@@ -101,42 +115,14 @@ services:
     networks:
       - observability
 
+  # Prometheus
   prometheus:
     container_name: prometheus
     image: prom/prometheus:latest
-    restart: always
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
-    networks:
-      - observability
-      - application
-
-  # Collector
-  otel-collector:
-    image: ${OTELCOL_IMG}
-    restart: always
-    command:
-      [
-        "--config=/etc/otel-collector-config.yaml",
-        "${OTELCOL_ARGS}"
-      ]
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "1888:1888" # pprof extension
-      - "8888:8888" # Prometheus metrics exposed by the collector
-      - "8889:8889" # Prometheus exporter metrics
-      - "13133:13133" # health_check extension
-      - "4317:4317" # OTLP gRPC receiver
-      - "55679:55679" # zpages extension
-    depends_on:
-      - jeager
-      - zipkin
-    networks:
-      - observability
-      - application
 
 networks:
   observability:
