add video model

--- a/video_admin/dockerfile
+++ b/video_admin/dockerfile
@@ -4,6 +4,8 @@ COPY ./entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /entrypoint.sh
 
+RUN apk add bash
+
 USER node
 
 WORKDIR /app
@@ -12,4 +14,4 @@ COPY . ./app
 
 EXPOSE 3333
 
-CMD ["/entrypoint.sh"]
+ENTRYPOINT ["/app/entrypoint.sh"]
