--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,6 @@ services:
       POSTGRES_DB: encoder
     ports:
       - 5434:5432
-    networks:
-      - application
 
   rabbitmq:
     image: "rabbitmq:3-management"
@@ -24,8 +22,6 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
-    networks:
-      - application
 
   # video_encode:
   #   build:
@@ -51,9 +47,6 @@ services:
     depends_on:
       - postgres
       - rabbitmq
-    networks:
-      - application
-      - observability
 
   # video_catalog:
   #   build:
@@ -69,32 +62,8 @@ services:
   #   networks:
   #     - application
   #     - observability
-
-  # jeager:
-  #   image: jaegertracing/all-in-one:latest
-  #   container_name: jeager
-  #   environment:
-  #     # SPAN_STORAGE_TYPE: elasticsearch
-  #     # ES_SERVER_URLS: "https://observability.es.us-east-1.aws.found.io"
-  #     # ES_USERNAME: elastic
-  #     # ES_PASSWORD: eR5B3cMMklU3srbRtzXGJOll
-  #     COLLECTOR_ZIPKIN_HOST_PORT: 9411
-  #     # COLLECTOR_OTLP_ENABLED: true
-  #   ports:
-  #     - 6831:6831/udp
-  #     - 6832:6832/udp
-  #     - 5778:5778
-  #     - 16686:16686
-  #     # - 4317:4317
-  #     - 4318:4318
-  #     - 14250:14250
-  #     - 14268:14268
-  #     - 14269:14269
-  #     # - 9411:9411
-  #   networks:
-  #     - observability
   collector:
-    image: otel/opentelemetry-collector-contrib
+    image: otel/opentelemetry-collector-contrib:0.53.0
     #    image: otel/opentelemetry-collector-contrib:latest
     command: [ "--config=/conf/collector-config.yaml" ]
     volumes:
@@ -104,16 +73,13 @@ services:
       - "4317:4317"
       - "4318:4318"
     depends_on:
-      - zipkin
+      - zipkin-all-in-one
 
   # Zipkin
-  zipkin:
+  zipkin-all-in-one:
     image: openzipkin/zipkin:latest
-    restart: always
     ports:
       - "9411:9411"
-    networks:
-      - observability
 
   # Prometheus
   prometheus:
@@ -123,9 +89,3 @@ services:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
-
-networks:
-  observability:
-    driver: bridge
-  application:
-    driver: bridge
