--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,6 +1,9 @@
+global:
+  scrape_interval: 15s # Default is every 1 minute.
+
 scrape_configs:
-  - job_name: "otel-collector"
-    scrape_interval: 10s
+  - job_name: "collector"
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
     static_configs:
-      - targets: ["otel-collector:8889"]
-      - targets: ["otel-collector:8888"]
+      - targets: ["collector:9464"]
