--- a/video_admin/package.json
+++ b/video_admin/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev -r tsconfig-paths/register --inspect -T --ignore-watch node_module src/server.ts"
+    "start": "ts-node-r tsconfig-paths/register --inspect -T --ignore-watch node_module src/server.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
@@ -13,11 +18,13 @@
     "@opentelemetry/instrumentation-express": "^0.32.0",
     "@opentelemetry/sdk-node": "^0.34.0",
     "amqplib": "^0.10.3",
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.8.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typeorm": "^0.3.10",
