--- a/video_admin/package.json
+++ b/video_admin/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-r tsconfig-paths/register --inspect -T --ignore-watch node_module src/server.ts",
-    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "start": "ts-node-dev -r tsconfig-paths/register --inspect -T --ignore-watch node_module src/server.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d ./ormconfig.ts",
     "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
     "typeorm:generate-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./migrations/$npm_config_name",
     "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
     "@opentelemetry/auto-instrumentations-node": "^0.35.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.34.0",
     "@opentelemetry/instrumentation-express": "^0.32.0",
     "@opentelemetry/sdk-node": "^0.34.0",
