--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -80,6 +80,28 @@ services:
     image: openzipkin/zipkin:latest
     ports:
       - "9411:9411"
+  loki:
+    image: grafana/loki:2.6.1
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - loki
+
+  promtail:
+    image: grafana/promtail:2.6.1
+    volumes:
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - loki
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    networks:
+      - loki
 
   # Prometheus
   prometheus:
