--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,18 +81,21 @@ services:
     ports:
       - "9411:9411"
   loki:
-    image: grafana/loki:2.6.1
+    image: grafana/loki:2.3.0
+    volumes:
+      - /opt/loki/config/loki-config.yml:/etc/loki/loki-config.yml
     ports:
       - "3100:3100"
-    command: -config.file=/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/loki-config.yml
     networks:
       - loki
 
   promtail:
-    image: grafana/promtail:2.6.1
+    image: grafana/promtail:2.3.0
     volumes:
-      - /var/log:/var/log
-    command: -config.file=/etc/promtail/config.yml
+      - ./loki/promtail-config.yml:/etc/promtail/promtail-config.yml
+      - /opt/loki/logs/nginx_access.log:/opt/nginx_access.log
+    command: -config.file=/etc/promtail/promtail-config.yml
     networks:
       - loki
 
