--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
-    "@opentelemetry/semantic-conventions": "^1.8.0"
+    "@opentelemetry/semantic-conventions": "^1.8.0",
+    "express-async-errors": "^3.1.1",
+    "winston-loki": "^6.0.6"
   }
 }
