--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -3,7 +3,11 @@ global:
 
 scrape_configs:
   - job_name: "collector"
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
     static_configs:
       - targets: ["collector:9464"]
+  - job_name: prometheus
+    static_configs:
+      - targets: ["localhost:9090"]
+  - job_name: postgres-exporter
+    static_configs:
+      - targets: ["postgres-exporter:9187"]
