--- a/video_admin/package.json
+++ b/video_admin/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
     "@opentelemetry/auto-instrumentations-node": "^0.35.0",
+    "@opentelemetry/exporter-collector": "^0.25.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.34.0",
     "@opentelemetry/instrumentation-express": "^0.32.0",
+    "@opentelemetry/node": "^0.24.0",
     "@opentelemetry/sdk-node": "^0.34.0",
     "amqplib": "^0.10.3",
     "axios": "^1.2.0",
@@ -30,7 +32,8 @@
     "tsconfig-paths": "^4.1.0",
     "typeorm": "^0.3.10",
     "typescript": "^4.9.3",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-loki": "^6.0.6"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.0",
